--- a/client/bower.json
+++ b/client/bower.json
@@ -20,6 +20,7 @@
     "bootstrap": "^3.3.7",
     "angular-local-storage": "^0.5.2",
     "angular": "^1.6.1",
-    "mobile-angular-ui": "^1.3.4"
+    "mobile-angular-ui": "^1.3.4",
+    "guid": "*"
   }
 }
